@@ -2132,8 +2132,12 @@
 		5018F2510DFDEAFF00C013A5 /* cocos2d */ = {
 			isa = PBXGroup;
 			children = (
-				50A24F010F3788C6007CAEB0 /* Nodes */,
-				50A24E890F378119007CAEB0 /* Particles */,
+				50A24F010F3788C6007CAEB0 /* Base Nodes */,
+				506414C50F9C67C0007A7B24 /* Atlas Nodes */,
+				506414C40F9C6792007A7B24 /* Sprite Nodes */,
+				506414C60F9C6A3D007A7B24 /* Menu Nodes */,
+				506414C30F9C6769007A7B24 /* Scene Nodes */,
+				50A24E890F378119007CAEB0 /* Particle Nodes */,
 				50A24E770F3780A2007CAEB0 /* Actions */,
 				50A24E760F378092007CAEB0 /* Effects */,
 				50305AF30E40E33200F63373 /* cocos2d.h */,
@@ -2225,6 +2229,54 @@
 			path = tests/PerformanceTest;
 			sourceTree = "<group>";
 		};
+		506414C30F9C6769007A7B24 /* Scene Nodes */ = {
+			isa = PBXGroup;
+			children = (
+				5018F2600DFDEAFF00C013A5 /* Scene.h */,
+				5018F2610DFDEAFF00C013A5 /* Scene.m */,
+				502B3E980E09A59500886982 /* Transition.h */,
+				502B3E990E09A59500886982 /* Transition.m */,
+			);
+			name = "Scene Nodes";
+			sourceTree = "<group>";
+		};
+		506414C40F9C6792007A7B24 /* Sprite Nodes */ = {
+			isa = PBXGroup;
+			children = (
+				5018F2620DFDEAFF00C013A5 /* Sprite.h */,
+				5018F2630DFDEAFF00C013A5 /* Sprite.m */,
+				509A79990F6188500032F449 /* AtlasSpriteManager.h */,
+				509A799A0F6188500032F449 /* AtlasSpriteManager.m */,
+				509A79950F6188420032F449 /* AtlasSprite.h */,
+				509A79960F6188420032F449 /* AtlasSprite.m */,
+			);
+			name = "Sprite Nodes";
+			sourceTree = "<group>";
+		};
+		506414C50F9C67C0007A7B24 /* Atlas Nodes */ = {
+			isa = PBXGroup;
+			children = (
+				506884700E96734A00F943E5 /* LabelAtlas.h */,
+				506884710E96734A00F943E5 /* LabelAtlas.m */,
+				506886540E96C6CC00F943E5 /* TileMapAtlas.h */,
+				506886550E96C6CC00F943E5 /* TileMapAtlas.m */,
+				506887D70E96C90000F943E5 /* AtlasNode.h */,
+				506887D80E96C90000F943E5 /* AtlasNode.m */,
+			);
+			name = "Atlas Nodes";
+			sourceTree = "<group>";
+		};
+		506414C60F9C6A3D007A7B24 /* Menu Nodes */ = {
+			isa = PBXGroup;
+			children = (
+				506C78EA0E0178FD00B48100 /* MenuItem.h */,
+				506C78EB0E0178FD00B48100 /* MenuItem.m */,
+				506C78A50E016A7300B48100 /* Menu.h */,
+				506C78A60E016A7300B48100 /* Menu.m */,
+			);
+			name = "Menu Nodes";
+			sourceTree = "<group>";
+		};
 		509B3A100F31027600F2FB95 /* cocoslive */ = {
 			isa = PBXGroup;
 			children = (
@@ -2272,7 +2324,7 @@
 			name = Actions;
 			sourceTree = "<group>";
 		};
-		50A24E890F378119007CAEB0 /* Particles */ = {
+		50A24E890F378119007CAEB0 /* Particle Nodes */ = {
 			isa = PBXGroup;
 			children = (
 				5038B6B00E196CD8009A621E /* ParticleSystem.h */,
@@ -2282,42 +2334,22 @@
 				504055AE0E3230BD00213FEF /* ParticleExamples.h */,
 				504055AF0E3230BD00213FEF /* ParticleExamples.m */,
 			);
-			name = Particles;
+			name = "Particle Nodes";
 			sourceTree = "<group>";
 		};
-		50A24F010F3788C6007CAEB0 /* Nodes */ = {
+		50A24F010F3788C6007CAEB0 /* Base Nodes */ = {
 			isa = PBXGroup;
 			children = (
 				5018F2540DFDEAFF00C013A5 /* CocosNode.h */,
 				5018F2550DFDEAFF00C013A5 /* CocosNode.m */,
-				509A79990F6188500032F449 /* AtlasSpriteManager.h */,
-				509A799A0F6188500032F449 /* AtlasSpriteManager.m */,
-				509A79950F6188420032F449 /* AtlasSprite.h */,
-				509A79960F6188420032F449 /* AtlasSprite.m */,
-				506884700E96734A00F943E5 /* LabelAtlas.h */,
-				506884710E96734A00F943E5 /* LabelAtlas.m */,
-				506886540E96C6CC00F943E5 /* TileMapAtlas.h */,
-				506886550E96C6CC00F943E5 /* TileMapAtlas.m */,
-				506887D70E96C90000F943E5 /* AtlasNode.h */,
-				506887D80E96C90000F943E5 /* AtlasNode.m */,
-				502B3E980E09A59500886982 /* Transition.h */,
-				502B3E990E09A59500886982 /* Transition.m */,
 				509E574A0E36234300BD7F09 /* TextureNode.h */,
 				509E574B0E36234300BD7F09 /* TextureNode.m */,
-				506C78EA0E0178FD00B48100 /* MenuItem.h */,
-				506C78EB0E0178FD00B48100 /* MenuItem.m */,
-				506C78A50E016A7300B48100 /* Menu.h */,
-				506C78A60E016A7300B48100 /* Menu.m */,
 				5018F25C0DFDEAFF00C013A5 /* Label.h */,
 				5018F25D0DFDEAFF00C013A5 /* Label.m */,
 				5018F25E0DFDEAFF00C013A5 /* Layer.h */,
 				5018F25F0DFDEAFF00C013A5 /* Layer.m */,
-				5018F2600DFDEAFF00C013A5 /* Scene.h */,
-				5018F2610DFDEAFF00C013A5 /* Scene.m */,
-				5018F2620DFDEAFF00C013A5 /* Sprite.h */,
-				5018F2630DFDEAFF00C013A5 /* Sprite.m */,
 			);
-			name = Nodes;
+			name = "Base Nodes";
 			sourceTree = "<group>";
 		};
 		50A783D30F3AFDB300104C45 /* experimental */ = {
